src/objects/Hospital__c.object
<CustomObject>
    <fields>
        <fullName>Is_Dr_available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Dr available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Medicine__c</fullName>
        <label>Medicine</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_no_of_staff__c</fullName>
        <label>Total no of staff</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>no_of_bed__c</fullName>
        <label>no of bed</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Hospital</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Hospital Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>hospitals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>